2010-01-20  Neil Williams  <linux@codehelp.co.uk>

	* NEWS: Update for 0.1.0 release.
	* README:

2009-12-26  Neil Williams  <linux@codehelp.co.uk>

	* README: Add an idea about other input formats.
	* help/C/gpdftext.xml: Some notes on writing text
	as a new PDF.
	* src/pdf.c: Check if the pango iter index is valid
	and output the number of pages written as PDF.

2009-12-04  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Switch to async writes for text files.
	* src/pdf.c: async write support for text files.
	* src/pdf.h: export buffer_to_txt

2009-12-04  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Reset PDF flag once set.
	* src/pdf.c: Migrate UTF8 warning from a dialog
	to the status bar and display at the end of processing.

2009-11-29  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Move completion message to the
	background task.
	* src/pdf.c: Save PDF files as a background task.
	(Closes: #5)

2009-11-27  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Fix bug with save_as being called
	for save actions.
	* src/pdf.c: Add user warning if text does not
	validate. (Closes: #4)

2009-11-27  Neil Williams  <linux@codehelp.co.uk>

	* src/pdf.c: Support opening text files. (Closes: #1)

2009-11-24  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Add support for SaveAs PDF.
	* src/ebookui.h: Flag as saved to a PDF
	* src/gpdftext.glade: Pad the textview to something
	close to the PDF output for almost WYSIWYG PDFs.
	* src/pdf.c: Convert sizes to inches for conversion to
	points. Determine width of page and set pango wrapping.
	Work out how many pages are needed.
	* src/pdf.h: buffer_to_pdf() is more logical.

2009-11-22  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Add ACOCAL_AMFLAGS.
	* configure.ac: Bump version, add dependencies on
	cairo and pango for PDF export support.
	* gpdftext.doap: Kick off the next version.
	* src/ebookui.c: Migrate some PDF code to pdf.c